Major improvements for usability on small screens.
* Fix background image
* Fix viewport scaling
* Rewrite .social-links to use flexbox to make use of new, stable functionality.
* Fix #about img responsiveness
* Decrease padding-left for .tech-list on smallest screens

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Swedish orienteer and software developer">
     <meta name="author" content="Samuel Plumppu">
     <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">
@@ -11,6 +11,7 @@
     <title>Samuel Plumppu | Software Developer</title>
   </head>
   <body>
+  <div class="bg"></div>
     <header>
       <nav>
         <a id="img-link" href="#top"><img alt="compass-logo" src="images/compass.svg"></a>
@@ -27,15 +28,12 @@
         </ul>
       </nav>
 
-
-
       <ul id="toggle-menu">
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-
     </header>
 
     <section id="top">
@@ -140,7 +138,6 @@
           </article>
 
 
-
           <article class="project">
             <div class="display">
               <a href="https://github.com/greenheart/AchtungPanzer" target="_blank" rel="noopener noreferrer">
@@ -219,8 +216,7 @@
                   to collaborate better using git. For example, I became familiar with advanced git-tools like <code>stash</code>, <code>rebase</code>
                   and working with branches specific for each feature/bugfix. However, the most important experience from this project was to
                   communicate with the users and figure out what they actually needed through tests.
-                  <a href="https://docs.google.com/document/d/12icmtxmnCxTABIZLYqQA6nhTLd18bBpC3FEgKFgM1fA">Our notes from this process (Swedish)</a>
-                  are documented.
+                  We documented <a href="https://docs.google.com/document/d/12icmtxmnCxTABIZLYqQA6nhTLd18bBpC3FEgKFgM1fA">our notes from this process (Swedish)</a>.
                 </p>
               </div>
             </div>
@@ -419,12 +415,28 @@
           Interested in working with me? Don't hesitate to <a href="mailto:samuel.plumppu@gmail.com">get in touch!</a>
         </h3>
         <div class="social-links">
-          <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer"><img alt="GitHub Logo" src="images/github-mark-white.svg"></a>
-          <a href="https://gitter.im/Greenheart" target="_blank" rel="noopener noreferrer"><img alt="Gitter Logo" src="images/gitter-logo.png"></a>
-          <a href="https://medium.com/my-adventure" target="_blank" rel="noopener noreferrer"><img alt="Medium Logo" src="images/medium-logo.png"></a>
-          <a href="https://linkedin.com/in/samuelplumppu"><img src="images/linkedin-logo.png" target="_blank" rel="noopener noreferrer" alt="LinkedIn Logo"></a>
-          <a href="https://freecodecamp.com/Greenheart" target="_blank" rel="noopener noreferrer"><img alt="Free Code Camp Logo" src="images/fcc-puck-green.svg"></a>
-          <a href="https://codepen.io/Greenheart" target="_blank" rel="noopener noreferrer"><img alt="CodePen Logo" src="images/codepen-logo.svg"></a>
+          <div class="row">
+            <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer">
+              <img alt="GitHub Logo" src="images/github-mark-white.svg">
+            </a>
+            <a href="https://gitter.im/Greenheart" target="_blank" rel="noopener noreferrer">
+              <img alt="Gitter Logo" src="images/gitter-logo.png">
+            </a>
+            <a href="https://medium.com/my-adventure" target="_blank" rel="noopener noreferrer">
+              <img alt="Medium Logo" src="images/medium-logo.png">
+            </a>
+          </div>
+          <div class="row">
+            <a href="https://linkedin.com/in/samuelplumppu">
+              <img src="images/linkedin-logo.png" target="_blank" rel="noopener noreferrer" alt="LinkedIn Logo">
+            </a>
+            <a href="https://freecodecamp.com/Greenheart" target="_blank" rel="noopener noreferrer">
+              <img alt="Free Code Camp Logo" src="images/fcc-puck-green.svg">
+            </a>
+            <a href="https://codepen.io/Greenheart" target="_blank" rel="noopener noreferrer">
+              <img alt="CodePen Logo" src="images/codepen-logo.svg">
+            </a>
+          </div>
         </div>
       </div>
     </section>
