--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
 
         <div id="about-text">
           <p>
-            I am an <span id="age">19</span>-year-old orienteer and software developer from Borås, Sweden who
+            I am a <span id="age">19</span>-year-old orienteer and software developer from Borås, Sweden who
             enjoy solving problems, learning and constantly challenging my abilities. Another thing I really love is to share
             my knowledge and help others. For example, I've helped fellow learners from the fantastic open source community
             <a href="http://www.freecodecamp.com" target="_blank" rel="noopener noreferrer">Free Code Camp</a> by mainly asking
