Add new project: Iso Conquest
Duplicated the images-folder in the development environment.

--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,51 @@
 
           <article class="project">
             <div class="display">
+              <a href="https://github.com/greenheart/iso-conquest" target="_blank" rel="noopener noreferrer">
+                <img alt="Iso Conquest" src="images/iso-conquest.png">
+              </a>
+              <div class="arrow arrow-prev"></div>
+              <div class="arrow arrow-next"></div>
+            </div>
+
+            <hr>
+
+            <div class="project-info">
+              <h3><a href="https://github.com/greenheart/iso-conquest" target="_blank" rel="noopener noreferrer">Goa Space Survival</a></h3>
+              <div class="project-tech">
+                <h4>Technologies</h4>
+                <ul class="tech-list">
+                  <li>JavaScript</li>
+                  <li>CSS</li>
+                  <li>HTML</li>
+                </ul>
+              </div>
+
+              <div class="project-description">
+                <p>
+                  This is a turn based strategy game where you conquer your opponent's areas to score points.
+                  It features gamemodes for PvP as well as experimental Player vs AI.
+                </p>
+                <p>
+                  The technology behind this project makes heavy use of new features of the web platform.
+                  For example, I experimented with advanced CSS Transforms to achieve the isometric UI.
+                  I also used native CSS variables, something that greatly increases the usability of vanilla CSS.
+                  And of course, I used modern JavaScript.
+                </p>
+                <p>
+                  Initially, this project was about creating a game with a nice UI and UX.
+                  But as things progressed, this turned into a playing ground where I learn about artificial intelligence.
+                </p>
+                <p style="font-size: 1.1rem;">
+                  <a href="http://samuelplumppu.se/iso-conquest" target="_blank">Play the latest version!</a>
+                </p>
+              </div>
+            </div>
+          </article>
+
+
+          <article class="project">
+            <div class="display">
               <a href="https://github.com/greenheart/goa-space-survival" target="_blank" rel="noopener noreferrer">
                 <img alt="Goa Space Survival" src="images/goa-space-survival-2.png">
               </a>
