--- a/src/index.html
+++ b/src/index.html
@@ -387,7 +387,7 @@
             <div class="skill">
               <h4>JavaScript</h4>
               <div class="bar">
-                <div style="width: 70%;"></div>
+                <div style="width: 90%;"></div>
               </div>
             </div>
             <div class="skill">
@@ -409,24 +409,30 @@
               </div>
             </div>
             <div class="skill">
-              <h4>Phaser</h4>
+              <h4>ASP.NET MVC</h4>
               <div class="bar">
-                <div style="width: 30%;"></div>
+                <div style="width: 40%;"></div>
               </div>
             </div>
           </div><!-- col -->
 
           <div class="col">
             <div class="skill">
-              <h4>Python</h4>
+              <h4>Node.js</h4>
               <div class="bar">
-                <div style="width: 60%;"></div>
+                <div style="width: 50%;"></div>
               </div>
             </div>
             <div class="skill">
-              <h4>jQuery</h4>
+              <h4>C#</h4>
               <div class="bar">
                 <div style="width: 50%;"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <h4>Python</h4>
+              <div class="bar">
+                <div style="width: 60%;"></div>
               </div>
             </div>
             <div class="skill">
@@ -439,12 +445,6 @@
               <h4>Meteor</h4>
               <div class="bar">
                 <div style="width: 40%;"></div>
-              </div>
-            </div>
-            <div class="skill">
-              <h4>Node.js</h4>
-              <div class="bar">
-                <div style="width: 20%;"></div>
               </div>
             </div>
           </div><!-- col -->
