Update blog links.

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
             For example, I have developed games, CLIs and web applications in various forms. You can find some of these projects down below!
             At the moment, I am working through Free Code Camp's four certifications to learn more about developing full stack applications using
             JavaScript. This will also be a great opportunity to get real world experience through the conclusive non-profit projects.
-            You can follow my progress on <a href="https://medium.com/my-adventure" target="_blank" rel="noopener noreferrer">my blog</a>.
+            You can follow my progress on <a href="https://blog.samuelplumppu.se" target="_blank">my blog</a>.
           </p>
           <p>
             Another big part of my life is orienteering, a sport that provides challenging problem solving as well as good excercise and sometimes even adventures!
@@ -469,8 +469,8 @@
             <a href="https://gitter.im/Greenheart" target="_blank" rel="noopener noreferrer">
               <img alt="Gitter Logo" src="images/gitter-logo.png">
             </a>
-            <a href="https://medium.com/my-adventure" target="_blank" rel="noopener noreferrer">
-              <img alt="Medium Logo" src="images/medium-logo.png">
+            <a href="https://blog.samuelplumppu.se" target="_blank">
+              <img alt="Medium Blog" src="images/medium-logo.png">
             </a>
           </div>
           <div class="row">
