Rename Free Code Camp to freeCodeCamp

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
             I am a <span id="age">19</span>-year-old orienteer and software developer from Borås, Sweden who
             enjoy solving problems, learning and constantly challenging my abilities. Another thing I really love is to share
             my knowledge and help others. For example, I've helped fellow learners from the fantastic open source community
-            <a href="http://www.freecodecamp.com" target="_blank" rel="noopener noreferrer">Free Code Camp</a> by mainly asking
+            <a href="http://www.freecodecamp.com" target="_blank" rel="noopener noreferrer">freeCodeCamp</a> by mainly asking
             guiding questions or pair programming to allow the learner to get as much value as possible out of each challenge.
             I've also found this to be very worthwhile since they also teach me a lot in the process.
           </p>
@@ -78,7 +78,7 @@
           <p>
             I have been programming regularly since late 2013 and worked in several different environments using mainly Python and JavaScript.
             For example, I have developed games, CLIs and web applications in various forms. You can find some of these projects down below!
-            At the moment, I am working through Free Code Camp's four certifications to learn more about developing full stack applications using
+            At the moment, I am working through freeCodeCamp's four certifications to learn more about developing full stack applications using
             JavaScript. This will also be a great opportunity to get real world experience through the conclusive non-profit projects.
             You can follow my progress on <a href="https://blog.samuelplumppu.se" target="_blank">my blog</a>.
           </p>
@@ -478,7 +478,7 @@
               <img src="images/linkedin-logo.png" alt="LinkedIn Logo">
             </a>
             <a href="https://freecodecamp.com/Greenheart" target="_blank" rel="noopener noreferrer">
-              <img alt="Free Code Camp Logo" src="images/fcc-puck-green.svg">
+              <img alt="freeCodeCamp Logo" src="images/fcc-puck-green.svg">
             </a>
             <a href="https://codepen.io/Greenheart" target="_blank" rel="noopener noreferrer">
               <img alt="CodePen Logo" src="images/codepen-logo.svg">
