Update description for Iso Conquest.

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
             <hr>
 
             <div class="project-info">
-              <h3><a href="https://github.com/greenheart/iso-conquest" target="_blank" rel="noopener noreferrer">Goa Space Survival</a></h3>
+              <h3><a href="https://github.com/greenheart/iso-conquest" target="_blank" rel="noopener noreferrer">Iso Conquest</a></h3>
               <div class="project-tech">
                 <h4>Technologies</h4>
                 <ul class="tech-list">
@@ -132,7 +132,7 @@
                 </p>
                 <p>
                   Initially, this project was about creating a game with a nice UI and UX.
-                  But as things progressed, this turned into a playing ground where I learn about artificial intelligence.
+                  But as things progressed, this turned out to be a great playing ground for learning about artificial intelligence.
                 </p>
                 <p style="font-size: 1.1rem;">
                   <a href="http://samuelplumppu.se/iso-conquest" target="_blank">Play the latest version!</a>
