Update dependencies and fix image dimensions.

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Swedish orienteer and software developer">
     <meta name="author" content="Samuel Plumppu">
-    <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway:200|Poiret+One' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
@@ -487,7 +487,7 @@
         </div>
       </div>
     </section>
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="page.js"></script>
   </body>
 </html>
