Long awaited: Update the text about me to better describe me in 2018.

--- a/src/index.html
+++ b/src/index.html
@@ -55,37 +55,34 @@
 
     <section id="about">
       <div class="content">
-        <h2>About me</h2>
+        <h2>Hey there!</h2>
         <hr>
         <img alt="Samuel Plumppu" src="images/samuel.jpg">
 
         <div id="about-text">
-          <p>
-            I am a 21-year-old orienteer and software developer from Borås, Sweden who
-            enjoy solving problems, learning and constantly challenging my abilities. Another thing I really love is to share
-            my knowledge and help others. For example, I've helped fellow learners from the fantastic open source community
-            <a href="http://www.freecodecamp.com" target="_blank" rel="noopener noreferrer">freeCodeCamp</a> by mainly asking
-            guiding questions or pair programming to allow the learner to get as much value as possible out of each challenge.
-            I've also found this to be very worthwhile since they also teach me a lot in the process.
-          </p>
-          <p>
-            When working with others, I like to think about the bigger picture and help several members of the team achieve more
-            rather than just completing my own task. This is partly because I enjoy watching others get more confident with their
-            skills, but mainly because the easiest way to provide great value to a team is to help several others perform better.
-            Some may define a good software developer as someone who is productive on their own. I would rather say a good developer
-            is someone who help others become good developers.
-          </p>
-          <p>
-            I have been programming regularly since late 2013 and worked in several different environments using mainly Python and JavaScript.
-            For example, I have developed games, CLIs and web applications in various forms. You can find some of these projects down below!
-            At the moment, I am working through freeCodeCamp's four certifications to learn more about developing full stack applications using
-            JavaScript. This will also be a great opportunity to get real world experience through the conclusive non-profit projects.
-            You can follow my progress on <a href="https://blog.samuelplumppu.se" target="_blank">my blog</a>.
-          </p>
-          <p>
-            Another big part of my life is orienteering, a sport that provides challenging problem solving as well as good excercise and sometimes even adventures!
-            I practice almost on a daily basis and regularly compete at a national level.
-          </p>
+            <p>I'm Samuel, a 21 year old orienteer, software developer and open source enthusiast, currently living in Gothenburg, Sweden.</p>
+            <p>
+                I'm a creator who enjoys solving problems, learning and constantly challenging my abilities.
+                Another thing I really love is to share my knowledge and help others.
+                In fact, I think we're better off by <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer">sharing our creations</a>.
+                This allows others to learn from our experience, and give a starting point for new creations.
+                Just look at the impact of open source software in the past twenty years.
+            </p>
+            <p>
+                I currently focus on full stack JavaScript development, but I'm also open to using other technology stacks.
+                By programming regularly since late 2013 and working with various technologies, I've come to a point where I can take my general programming knowledge and apply it to several different languages and environments.
+                It all depends on what is a good solution for the problem.
+            </p>
+            <p>
+                Since the late summer 2015, I've been involved in the learning community <a href="https://freecodecamp.org" target="_blank" rel="noopener noreferrer">freeCodeCamp</a>, volunteering as a programming mentor, course content creator and developer.
+                This has not only taught me about software development, but also about how to effectively communicate and work as a team.
+                Because of this, I care about creating a good team environment where people are encouraged to help each other learn and grow.
+            </p>
+            <p>
+              As you might have guessed from the background image, another big part of my life is orienteering.
+              This is a sport that gives challenging problem solving, good exercise and sometimes even adventures!
+              I practice regularly and like to explore how different it can be to navigate in new terrain.
+            </p>
         </div>
       </div>
     </section>
