Update link to use https.

--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@
                   But as things progressed, this turned out to be a great playing ground for learning about artificial intelligence.
                 </p>
                 <p style="font-size: 1.1rem;">
-                  <a href="http://samuelplumppu.se/iso-conquest" target="_blank">Play the latest version!</a>
+                  <a href="https://samuelplumppu.se/iso-conquest" target="_blank">Play the latest version!</a>
                 </p>
               </div>
             </div>
