--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
         <img alt="Samuel Plumppu" src="images/samuel.jpg">
 
         <div id="about-text">
-            <p>I'm Samuel, a 21 year old orienteer, software developer and open source enthusiast, currently living in Gothenburg, Sweden.</p>
+            <p>I'm Samuel, a 21-year-old orienteer, software developer and open source enthusiast, currently living in Gothenburg, Sweden.</p>
             <p>
                 I'm a creator who enjoys solving problems, learning and constantly challenging my abilities.
                 Another thing I really love is to share my knowledge and help others.
