--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
             </p>
             <p>
                 Since the late summer 2015, I've been involved in the learning community <a href="https://freecodecamp.org" target="_blank" rel="noopener noreferrer">freeCodeCamp</a>, volunteering as a programming mentor, course content creator and developer.
-                This has not only taught me about software development, but also about how to effectively communicate and work as a team.
+                This has not only taught me about software development or managing large-scale projects, but also about how to effectively communicate and work as a team.
                 Because of this, I care about creating a good team environment where people are encouraged to help each other learn and grow.
             </p>
             <p>
