--- a/src/index.html
+++ b/src/index.html
@@ -406,10 +406,16 @@
               </div>
             </div>
             <div class="skill">
-              <h4>ASP.NET MVC</h4>
-              <div class="bar">
-                <div style="width: 40%;"></div>
-              </div>
+                <h4>Angular</h4>
+                <div class="bar">
+                    <div style="width: 50%;"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <h4>React</h4>
+                <div class="bar">
+                    <div style="width: 30%;"></div>
+                </div>
             </div>
           </div><!-- col -->
 
@@ -439,9 +445,15 @@
               </div>
             </div>
             <div class="skill">
-              <h4>Meteor</h4>
+                <h4>Meteor</h4>
+                <div class="bar">
+                    <div style="width: 40%;"></div>
+                </div>
+            </div>
+            <div class="skill">
+              <h4>ASP.NET MVC</h4>
               <div class="bar">
-                <div style="width: 40%;"></div>
+                <div style="width: 20%;"></div>
               </div>
             </div>
           </div><!-- col -->
