Update projects - add year information.
Also build latest version of the project.

--- a/src/index.html
+++ b/src/index.html
@@ -114,6 +114,7 @@
                   <li>CSS</li>
                   <li>HTML</li>
                 </ul>
+                <p class="year">2016 - present</p>
               </div>
 
               <div class="project-description">
@@ -141,6 +142,54 @@
 
           <article class="project">
             <div class="display">
+              <a href="https://github.com/teknik-eksjo/chronos" target="_blank" rel="noopener noreferrer">
+                <img alt="Screenshot from Chronos, the scheduling app" src="images/chronos-base-schedule.jpeg">
+              </a>
+              <div class="arrow arrow-prev"></div>
+              <div class="arrow arrow-next"></div>
+            </div>
+
+            <hr>
+
+            <div class="project-info">
+              <h3><a href="https://github.com/teknik-eksjo/chronos" target="_blank" rel="noopener noreferrer">Chronos</a></h3>
+              <div class="project-tech">
+                <h4>Technologies</h4>
+                <ul class="tech-list">
+                  <li>Python 3</li>
+                  <li>JavaScript</li>
+                  <li>Flask</li>
+                  <li>Docker</li>
+                  <li>Docker Compose</li>
+                  <li>PostgreSQL</li>
+                  <li>Bootstrap</li>
+                  <li>jQuery</li>
+                </ul>
+                <p class="year">2016</p>
+              </div>
+
+              <div class="project-description">
+                <p>
+                  The most ambitious project up until this point. To wrap up the courses Programming 2, User Interface and User Experience
+                  design 1 and Web Server Programming 1, me and my classmates wanted to give back to our school while at the same time get
+                  experience with a project that would involve the whole development process - all the way from figuring out a real world
+                  problem and gather information from users to testing potential solutions and compile even more feedback to
+                  finally implement, deploy and prepare the system for future maintenance.
+                </p>
+                <p>
+                  A really fun and stimulating project that taught me new technologies, a lot about project management using GitHub and how
+                  to collaborate better using git. For example, I became familiar with Git features like <code>stash</code>, <code>rebase</code>
+                  and working with branches specific for each feature/bugfix. However, the most important experience from this project was to
+                  communicate with users and figure out what they actually needed through various tests and inverviews.
+                  We documented <a href="https://docs.google.com/document/d/12icmtxmnCxTABIZLYqQA6nhTLd18bBpC3FEgKFgM1fA" target="_blank" rel="noopener noreferrer">our notes from this process (Swedish)</a>.
+                </p>
+              </div>
+            </div>
+          </article>
+
+
+          <article class="project">
+            <div class="display">
               <a href="https://github.com/greenheart/goa-space-survival" target="_blank" rel="noopener noreferrer">
                 <img alt="Goa Space Survival" src="images/goa-space-survival-2.png">
               </a>
@@ -160,6 +209,7 @@
                   <li>Phaser</li>
                   <li>Mongo DB</li>
                 </ul>
+                <p class="year">2015</p>
               </div>
 
               <div class="project-description">
@@ -201,6 +251,7 @@
                   <li>Python 3</li>
                   <li>PyGame</li>
                 </ul>
+                <p class="year">2014</p>
               </div>
 
               <div class="project-description">
@@ -214,53 +265,6 @@
                   This was a project I did together with <a href="https://github.com/greenheart/AchtungPanzer#creators" target="_blank" rel="noopener noreferrer">some friends</a>
                   for a programming class in school. It was my first real project
                   using Git and even though we used a Git-GUI, I learned pretty much about soure control.
-                </p>
-              </div>
-            </div>
-          </article>
-
-
-          <article class="project">
-            <div class="display">
-              <a href="https://github.com/teknik-eksjo/chronos" target="_blank" rel="noopener noreferrer">
-                <img alt="Screenshot from Chronos, the scheduling app" src="images/chronos-base-schedule.jpeg">
-              </a>
-              <div class="arrow arrow-prev"></div>
-              <div class="arrow arrow-next"></div>
-            </div>
-
-            <hr>
-
-            <div class="project-info">
-              <h3><a href="https://github.com/teknik-eksjo/chronos" target="_blank" rel="noopener noreferrer">Chronos</a></h3>
-              <div class="project-tech">
-                <h4>Technologies</h4>
-                <ul class="tech-list">
-                  <li>Python 3</li>
-                  <li>JavaScript</li>
-                  <li>Flask</li>
-                  <li>Docker</li>
-                  <li>Docker Compose</li>
-                  <li>PostgreSQL</li>
-                  <li>Bootstrap</li>
-                  <li>jQuery</li>
-                </ul>
-              </div>
-
-              <div class="project-description">
-                <p>
-                  The most ambitious project up until this point. To wrap up the courses Programming 2, User Interface and User Experience
-                  design 1 and Web Server Programming 1, me and my classmates wanted to give back to our school while at the same time get
-                  experience with a project that would involve the whole development process - all the way from figuring out a real world
-                  problem and gather information from users to testing potential solutions and compile even more feedback to
-                  finally implement, deploy and prepare the system for future maintenance.
-                </p>
-                <p>
-                  A really fun and stimulating project that taught me new technologies, a lot about project management using GitHub and how
-                  to collaborate better using git. For example, I became familiar with advanced git-tools like <code>stash</code>, <code>rebase</code>
-                  and working with branches specific for each feature/bugfix. However, the most important experience from this project was to
-                  communicate with the users and figure out what they actually needed through tests.
-                  We documented <a href="https://docs.google.com/document/d/12icmtxmnCxTABIZLYqQA6nhTLd18bBpC3FEgKFgM1fA">our notes from this process (Swedish)</a>.
                 </p>
               </div>
             </div>
@@ -285,6 +289,7 @@
                 <ul class="tech-list">
                   <li>Python 3</li>
                 </ul>
+                <p class="year">2014</p>
               </div>
 
               <div class="project-description">
@@ -297,6 +302,41 @@
                   My biggest challenge with this project was to format the text-interface to fit the console. Especially the highscores were tricky.
                   This was my last serious project built without a version control system as I realized it was hard to keep track of changes in a file 1000+ lines long.
                   This project also taught me why modular code beat long functions that does multiple things... &#9786;
+                </p>
+              </div>
+            </div>
+          </article>
+
+
+          <article class="project" id="tic-tac-toe">
+            <div class="display">
+              <a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank" rel="noopener noreferrer">
+                <img alt="The GUI of Tic Tac Toe" src="images/meteor-tic-tac-toe.png">
+              </a>
+              <div class="arrow arrow-prev"></div>
+              <div class="arrow arrow-next"></div>
+            </div>
+
+            <hr>
+
+            <div class="project-info">
+              <h3><a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank" rel="noopener noreferrer">Meteor Tic Tac Toe</a></h3>
+              <div class="project-tech">
+                <h4>Technologies</h4>
+                <ul class="tech-list">
+                  <li>JavaScript</li>
+                  <li>Meteor</li>
+                  <li>Mongo DB</li>
+                </ul>
+                <p class="year">2015</p>
+              </div>
+
+              <div class="project-description">
+                <p>
+                  A simple game built together with <a href="https://github.com/Catagen" target="_blank" rel="noopener noreferrer">Szymon</a>
+                  to learn the basics of the Meteor Platform.
+                  An interesting feature we implemented was the Room-system that enables several players to
+                  play at the same time and join simply by entering a room's number
                 </p>
               </div>
             </div>
@@ -324,46 +364,13 @@
                   <li>redis-py</li>
                   <li>PrettyTable</li>
                 </ul>
+                <p class="year">2015</p>
               </div>
 
               <div class="project-description">
                 <p>
                   A small school project where I learned how to use the Redis database in python progams.
                   Features of this CLI include creation, deletion and search of contacts.
-                </p>
-              </div>
-            </div>
-          </article>
-
-
-          <article class="project" id="tic-tac-toe">
-            <div class="display">
-              <a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank" rel="noopener noreferrer">
-                <img alt="The GUI of Tic Tac Toe" src="images/meteor-tic-tac-toe.png">
-              </a>
-              <div class="arrow arrow-prev"></div>
-              <div class="arrow arrow-next"></div>
-            </div>
-
-            <hr>
-
-            <div class="project-info">
-              <h3><a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank" rel="noopener noreferrer">Meteor Tic Tac Toe</a></h3>
-              <div class="project-tech">
-                <h4>Technologies</h4>
-                <ul class="tech-list">
-                  <li>JavaScript</li>
-                  <li>Meteor</li>
-                  <li>Mongo DB</li>
-                </ul>
-              </div>
-
-              <div class="project-description">
-                <p>
-                  A simple game built together with <a href="https://github.com/Catagen" target="_blank" rel="noopener noreferrer">Szymon</a>
-                  to learn the basics of the Meteor Platform.
-                  An interesting feature we implemented was the Room-system that enables several players to
-                  play at the same time and join simply by entering a room's number
                 </p>
               </div>
             </div>
