Update Iso Conquest description

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
 
               <div class="project-description">
                 <p>
-                  This is a turn based strategy game where you conquer your opponent's areas to score points.
+                  In this minimalistic, turn based strategy game, your task is to seize control over the battlefield.
                   It features gamemodes for PvP as well as experimental Player vs AI.
                 </p>
                 <p>
