Add Tab Typer project.

--- a/src/index.html
+++ b/src/index.html
@@ -142,6 +142,52 @@
 
           <article class="project">
             <div class="display">
+              <a href="https://github.com/greenheart/tab-typer" target="_blank" rel="noopener noreferrer">
+                <img alt="Tab Typer" src="images/tab-typer.png">
+              </a>
+              <div class="arrow arrow-prev"></div>
+              <div class="arrow arrow-next"></div>
+            </div>
+
+            <hr>
+
+            <div class="project-info">
+              <h3><a href="https://github.com/greenheart/tab-typer" target="_blank" rel="noopener noreferrer">Tab Typer</a></h3>
+              <div class="project-tech">
+                <h4>Technologies</h4>
+                <ul class="tech-list">
+                  <li>JavaScript</li>
+                  <li>localForage.js</li>
+                  <li>FileSaver.js</li>
+                  <li>CSS</li>
+                  <li>HTML</li>
+                </ul>
+                <p class="year">2018</p>
+              </div>
+
+              <div class="project-description">
+                <p>
+                  As the web platform matures and standardize over time, it's interesting to see what can be done without common libraries or frameworks.
+                  Even though modern tooling provides good structure and solutions for larger projects, they all rely on the fundamental web platform features.
+                </p>
+                <p>
+                  Therefore, I like to keep up with the limits of the platform itself.
+                  It helps me better understand why the modern tools work the way they do, and what constraints they are built around.
+                </p>
+                <p>
+                  Designed and implemented in a few days, this project was created so I could edit temporary notes in a focused environment, without leaving the browser.
+                  It's pretty convenient to just open a new tab and start typing in less than three seconds.
+                </p>
+                <p style="font-size: 1.1rem;">
+                  <a href="https://samuelplumppu.se/tab-typer" target="_blank">Try it in your next tab!</a>
+                </p>
+              </div>
+            </div>
+          </article>
+
+
+          <article class="project">
+            <div class="display">
               <a href="https://github.com/teknik-eksjo/chronos" target="_blank" rel="noopener noreferrer">
                 <img alt="Screenshot from Chronos, the scheduling app" src="images/chronos-base-schedule.jpeg">
               </a>
