--- a/src/index.html
+++ b/src/index.html
@@ -224,7 +224,7 @@
                 </p>
                 <p>
                   A really fun and stimulating project that taught me new technologies, a lot about project management using GitHub and how
-                  to collaborate better using git. For example, I became familiar with Git features like <code>stash</code>, <code>rebase</code>
+                  to collaborate better using Git. For example, I became familiar with Git features like <code>stash</code>, <code>rebase</code>
                   and working with branches specific for each feature/bugfix. However, the most important experience from this project was to
                   communicate with users and figure out what they actually needed through various tests and inverviews.
                   We documented <a href="https://docs.google.com/document/d/12icmtxmnCxTABIZLYqQA6nhTLd18bBpC3FEgKFgM1fA" target="_blank" rel="noopener noreferrer">our notes from this process (Swedish)</a>.
